--- a/src/components/App.css
+++ b/src/components/App.css
@@ -762,11 +762,11 @@ h4:not(:hover) > .lang
 .resource .data > [data-prop="bdo:workHasTranslation"] .subsubgroup h4.multiple:not(:last-child),
 .resource .data > [data-prop="bdo:workHasTranslation"] .subgroup .subsub:not(:last-child) { margin-bottom:10px;} 
 
-.urilink svg { vertical-align: middle; display:inline-block; padding-right:5px; background-color:white;}
-.urilink:hover svg path { color:#d73449; stroke:#d73449; }
-.urilink svg { width:24px;}
-.urilink:hover svg.etext path { fill: #d73449; }
-
+.urilink svg { vertical-align: sub; display:inline-block; padding-right:10px; background-color:white;}
+.urilink svg { width:24px; opacity:0.9;}
+.urilink svg path { color:#d73449; stroke:#d73449; }
+.urilink svg.etext path { fill: #d73449; }
+.urilink:hover svg { opacity:1 }
 /*
 TODO 
 + props/sous-props cf WorkW-01 (sous-props/titre en 14 et letterspacing à (-)0.3)
