add EAP/BL logo to metadata

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1201,7 +1201,13 @@ h2 .wd .before { background-image:url("/WD.svg");  background-size:18px auto; ba
 .provider.bdr .before { background-image:url("/logo.svg"); background-size:17px auto; background-position:top 1px right 5px; }
 .provider.bnf .before { background-image:url("/BNF.svg"); background-size:19px auto;background-position:top 4px left;}
 .provider.dila .before { background-image:url("/DILA-favicon.ico"); background-position:top 1px right 5px;}
+
+.provider.eap::before { content: ' '; width: 25px;  height: 25px; border-radius: 13px;  background:white;position:absolute;
+   background-repeat:no-repeat; left:-20px;}
+.provider.eap::before { background-image:url("/BL.gif"); background-size:auto 21px; background-position:center; }
+
 .provider.eap .before { background-image:url("/BL.gif"); background-size:auto 13px; background-position:left 4px top; }
+
 .provider.gretil .before { background-image:url("/GRETIL.png"); background-size:auto 13px; background-position:top 1px right 6px;}
 .provider.ia .before { background-image:url("/IA.png"); background-size:auto 13px;background-position:top 0px left 2px;}
 .provider.mbbt .before { background-image:url("/MB-icon.jpg"); background-position:top 1px right 6px;} 
